--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body bgcolor="black">
     <font color="#85C1E9" face="Verdana">
-    <center><img src="imagen/tron.png" width="50%" height="15%"></center>
+    <center><img src="imagen/tron.png" width="70%" height="auto"></center>
     <center>
     <br>
     <h2>|SSW 5IV7|</h2>
@@ -20,8 +20,12 @@
     <br>
     <h2>Cifrados Polialfabeticos</h2><a href="T02CifPolialfabeticos/index.html">Teletransportar</a>
     <br>
+    <h2>Viggenere</h2><a href="02Vigenere/vigenere.html">Teletransportar</a>
+    <br>
+    <h2>Cifrado DES archivos</h2><a href="DES/index.html">Teletransportar</a>
+    <br>
     <h6>---END OF LINE---</h6>
     </center>
     </font>
-    <img src="imagen/grid2.png" width="100%" height="550">
+    <img src="imagen/grid2.png" width="100%" height="auto">
 </body>
